# FovePythonBindings

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  doxygen.yml
example/: README.md
src/: Fove_CAPI_pybind11.cpp  bindings.cpp  bindings.h
src/Doxygen/: Config_Python
src/fove/: __init__.py  headset.py
